--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,41 @@
-# Python venv / caches
-.venv/
+# .gitkeep を配備
+touch Workspace/.gitkeep Workspace/Inbox/.gitkeep Workspace/Runs/.gitkeep Workspace/Done/.gitkeep Workspace/Fail/.gitkeep
+
+# .gitignore を（追記で）強化
+cat >> .gitignore <<'EOF'
+# --- macOS & Python ---
+.DS_Store
 __pycache__/
-*.py[cod]
-*.ipynb_checkpoints/
+*.pyc
 
-# Local runtime artifacts
-Workspace/
-Done/
-Fail/
-Inbox/
-/tmp/
-*.log
+# --- 仮想環境は追跡しない ---
+.venv/
 
-# Models, dicts, checkpoints, audio/video samples (keep outside repo)
+# --- Workspace の中身は無視（ディレクトリだけ残す） ---
+Workspace/*
+!Workspace/.gitkeep
+Workspace/Inbox/*
+!Workspace/Inbox/.gitkeep
+Workspace/Runs/*
+!Workspace/Runs/.gitkeep
+Workspace/Done/*
+!Workspace/Done/.gitkeep
+Workspace/Fail/*
+!Workspace/Fail/.gitkeep
+
+# --- 音声/動画など大容量（誤コミット防止） ---
 *.wav
 *.mp3
 *.m4a
+*.flac
+*.aac
 *.mp4
 *.mov
+EOF
 
-# Sudachi large dicts (installed via pip, not versioned)
-**/sudachidict*/resources/system.dic
+git add .gitignore Workspace/.gitkeep Workspace/Inbox/.gitkeep Workspace/Runs/.gitkeep Workspace/Done/.gitkeep Workspace/Fail/.gitkeep
+git commit -m "chore: keep Workspace skeleton tracked; ignore heavy outputs"
+git push
 
-# OS / editor junk
-.DS_Store
-.vscode/
-.idea/
+config/sudachi.json
+config/sudachi.json
